Refactored endpoint /transactions/{uuid} to /accounts/{uuid}/transactions
