# src/main/resources/openapi-doc.yaml
@@ -93,6 +93,40 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Account"
+  /accounts/{uuid}/transactions:
+    get:
+      description: Gets all transactions for the account
+      tags: [ accounts ]
+      parameters:
+        - in: path
+          name: uuid
+          schema:
+            type: uuid
+          required: true
+          description: Player UUID
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            format: int32
+          required: false
+          description: Maximum number of values to retrieve (default 10)
+        - in: query
+          name: sort
+          schema:
+            type: string
+            enum: [ asc, desc ]
+          required: false
+          description: Whether to sort the transactions by timestamp ascending or descending (default "desc")
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Transaction"
   /accounts/{uuid}/balance:
     put:
       description: Set an account's balance by player UUID
@@ -120,40 +154,6 @@ paths:
       description: Gets all transactions
       tags: [ transactions ]
       parameters:
-        - in: query
-          name: limit
-          schema:
-            type: integer
-            format: int32
-          required: false
-          description: Maximum number of values to retrieve (default 10)
-        - in: query
-          name: sort
-          schema:
-            type: string
-            enum: [ asc, desc ]
-          required: false
-          description: Whether to sort the transactions by timestamp ascending or descending (default "desc")
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Transaction"
-  /transactions/{uuid}:
-    get:
-      description: Gets all transactions by player UUID
-      tags: [ transactions ]
-      parameters:
-        - in: path
-          name: uuid
-          schema:
-            type: uuid
-          required: true
-          description: Player UUID
         - in: query
           name: limit
           schema:
